<resources>
    <string name="app_name" translatable="false">Bookswap</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_messages" translatable="false">Mensajes</string>
    <string name="title_notifications" translatable="false">Notificaciones</string>
    <string name="login" translatable="false">Iniciar sesión</string>
    <string name="register" translatable="false">Registrarse</string>
    <string name="slogan" translatable="false">Intercambia ideas</string>
    <string name="welcome" translatable="false">Bienvenido de nuevo</string>
    <string name="inicia_sesion_en_tu_cuenta" translatable="false">Inicia sesión en tu cuenta</string>
    <string name="email" translatable="false">Email</string>
    <string name="contraseña" translatable="false">Contraseña</string>
    <string name="olvidaste_tu_contraseña" translatable="false">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_una_cuenta" translatable="false">¿No tienes una cuenta? Regístrate</string>
    <string name="bad_credentials" translatable="false">Email y/o contraseña incorrectos</string>
    <string name="regístrate" translatable="false">Regístrate</string>
    <string name="crea_tu_nueva_cuenta" translatable="false">Crea tu nueva cuenta</string>
    <string name="nombre" translatable="false">Nombre</string>
    <string name="confirma_tu_contraseña" translatable="false">Confirma tu contraseña</string>
    <string name="al_hacer_click_aceptas" translatable="false">Al hacer click en “Regístrarse” aceptas nuestros términos de uso y política de privacidad.</string>
    <string name="ya_tienes_cuenta" translatable="false">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="user_already_created" translatable="false">El usuario con este email ya fue creado. Por favor, verifica tu email.</string>
    <string name="password_not_equal" translatable="false">Las contraseñas no son iguales</string>
    <string name="use_unal_email" translatable="false">Por favor, usa tu correo unal</string>
    <string name="password_too_short" translatable="false">La contraseña debe tener al menos 8 caracteres</string>
    <string name="password_should_contain" translatable="false">La contraseña debe tener al menos una mayúscula, una minúscula, un caracter especial y un número</string>
    <string name="access_token_key" translatable="false">com.example.bookswap.ACCESS_TOKEN</string>
    <string name="user_id_key">com.example.bookswap.USER_ID</string>
    <string name="query_hint" translatable="false">Busca libros</string>
    <string name="book_author" translatable="false">%1$s by %2$s</string>
    <string name="libros_deseados">Libros deseados</string>
    <string name="wanted_book_title">- %1$s</string>
    <string name="wanted_book_author">- %1$s</string>
    <string name="perfil">Perfil</string>
    <string name="intercambios">Intercambios</string>
    <string name="amigos">Amigos</string>
    <string name="author_profile">(%1$s)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_adir_libro">Añadir libro</string>
    <string name="a_adir_foto">Añadir foto</string>
    <string name="guardar">Guardar</string>


</resources>