<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bottom_corners_rounded"></View>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:textColor="@color/white"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_bold"></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:src="@drawable/books">

            </ImageView>

        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rounded_corner"
            android:layout_margin="16dp"
            android:fontFamily="@font/inter_semi_bold"></Button>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            android:background="@drawable/rounded_corner"
            android:layout_margin="16dp"
            android:fontFamily="@font/inter_semi_bold"></Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>