<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.bookswap.ui.profile.ProfileViewModel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.profile.ProfileFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_bg"
            android:padding="40dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideline_0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.profilePic}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/user" />

            <TextView
                android:id="@+id/profile_name"
                style="@style/inter_font_semi_bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.name}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_pic"
                tools:text="Devon Lane" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.email}"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_name"
                tools:text="devon@unal.edu.co"></TextView>

            <TextView
                android:id="@+id/profile_swaps"
                style="@style/inter_font_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="70dp"
                android:text="@{viewModel.swaps.toString()}"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@id/vertical_guideline_0.5"
                app:layout_constraintTop_toBottomOf="@id/profile_email"
                tools:text="165">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intercambios"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/profile_swaps"
                app:layout_constraintStart_toStartOf="@id/profile_swaps"
                app:layout_constraintTop_toBottomOf="@id/profile_swaps">

            </TextView>

            <TextView
                android:id="@+id/profile_friends"
                style="@style/inter_font_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:text="@{viewModel.friends.toString()}"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/vertical_guideline_0.5"
                app:layout_constraintTop_toBottomOf="@id/profile_email"
                tools:text="300">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amigos"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/profile_friends"
                app:layout_constraintStart_toStartOf="@id/profile_friends"
                app:layout_constraintTop_toBottomOf="@id/profile_friends"></TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bio_radius"
            android:padding="30dp"
            android:text="@{viewModel.bio}"
            android:textColor="@color/black"
            tools:text="Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.">
            >

        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_book_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_adir_libro"
            >

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.tabs.TabLayout
            android:layout_marginTop="16dp"
            android:id="@+id/books_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:layout_marginTop="16dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:id="@+id/books_view_pager"
            android:layout_width="match_parent"
            android:layout_marginBottom="64dp"
           >

        </androidx.viewpager2.widget.ViewPager2>
    </LinearLayout>
    </ScrollView>
</layout>